@@ -246,6 +246,34 @@ int lrs_dev_hdl_add(struct lrs_sched *sched,
 int lrs_dev_hdl_del(struct lrs_dev_hdl *handle, int index, int rc);
 
 /**
+ * Will try to remove a device thread context.
+ *
+ * If the device thread is still busy after 100ms, we delay the removal.
+ *
+ * \param[in]   handle      Device handle.
+ * \param[in]   index       Index of the device to remove from the list.
+ *
+ * \return                  0 on success,
+ *                         -EAGAIN if the thread is still busy,
+ *                         -errno on failure.
+ */
+int lrs_dev_hdl_trydel(struct lrs_dev_hdl *handle, int index);
+
+/**
+ * Retry to remove a device thread context.
+ *
+ * If the device thread is still busy, we delay the removal.
+ *
+ * \param[in]   handle      Device handle.
+ * \param[in]   dev         Device to remove from the list.
+ *
+ * \return                  0 on success,
+ *                         -EAGAIN if the thread is still busy,
+ *                         -errno on failure.
+ */
+int lrs_dev_hdl_retrydel(struct lrs_dev_hdl *handle, struct lrs_dev *dev);
+
+/**
  * Load all the devices that are attributed to this LRS from the DSS
  *
  * \param[in]      sched    scheduler managing the device
